fixed issues with spacing on the navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,7 +291,7 @@ footer {
 /* Media query: large and landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
 
-#photos { columns-count:2;
+#photos { column-count: 2;
            columns-gap: 0; 
 
 }
@@ -299,22 +299,22 @@ footer {
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
-
-
     nav {
         display: block;
         position: relative;
         box-shadow: none;
         width: fit-content;
-        padding-right: 1rem;
+        padding-right: 3rem;
+        justify-content: space-around;
     }
 
     #menu {
         display: flex;
+        justify-content: space-around;
     }
 
     #menu > li {
-        padding-left: 1rem;
+        padding-left: 3rem;
     }
 
     .nav-toggle-label {
@@ -359,7 +359,7 @@ footer {
     }
 
     #photos { 
-            columns-count: 3; 
+        column-count: 3;  
 }
 
 /* Form */
@@ -391,7 +391,7 @@ footer {
 @media screen and (min-width: 992px) 
    
 #photos { 
-    columns-count:4;
+       column-count: 4;
 } 
 
 #menu a:hover{
